openshift.yml
apiVersion: v1
items:
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: shadowing
      app.kubernetes.io/component: shadowing
      app.kubernetes.io/instance: shadowing
    name: httpd-24-centos7
  spec:
    lookupPolicy:
      local: false
    tags:
    - annotations:
        openshift.io/imported-from: centos/httpd-24-centos7
      from:
        kind: DockerImage
        name: centos/httpd-24-centos7
      generation: null
      importPolicy: {}
      name: latest
      referencePolicy:
        type: ""
  status:
    dockerImageRepository: ""
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: shadowing
      app.kubernetes.io/component: shadowing
      app.kubernetes.io/instance: shadowing
    name: shadowing
  spec:
    lookupPolicy:
      local: false
  status:
    dockerImageRepository: ""
- apiVersion: build.openshift.io/v1
  kind: BuildConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: shadowing
      app.kubernetes.io/component: shadowing
      app.kubernetes.io/instance: shadowing
    name: shadowing
  spec:
    nodeSelector: null
    output:
      to:
        kind: ImageStreamTag
        name: shadowing:latest
    postCommit: {}
    resources: {}
    source:
      git:
        uri: https://github.com/browningjp/shadowing
      type: Git
    strategy:
      sourceStrategy:
        from:
          kind: ImageStreamTag
          name: httpd-24-centos7:latest
      type: Source
    triggers:
    - github:
        secret: VK9Pb8KIZEgqiUBgpzH2
      type: GitHub
    - generic:
        secret: 8aRKsUmX_PhXM6ujE8tO
      type: Generic
    - type: ConfigChange
    - imageChange: {}
      type: ImageChange
  status:
    lastVersion: 0
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: shadowing
      app.kubernetes.io/component: shadowing
      app.kubernetes.io/instance: shadowing
    name: shadowing
  spec:
    replicas: 1
    selector:
      deploymentconfig: shadowing
    strategy:
      resources: {}
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          deploymentconfig: shadowing
      spec:
        containers:
        - image: shadowing:latest
          name: shadowing
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8443
            protocol: TCP
          volumeMounts:
          - name: shadowing-volume
            mountPath: /opt/app-root/src/config
          resources: {}
        volumes:
        - configMap:
            name: shadowing
          name: shadowing-volume
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - shadowing
        from:
          kind: ImageStreamTag
          name: shadowing:latest
      type: ImageChange
  status:
    availableReplicas: 0
    latestVersion: 0
    observedGeneration: 0
    replicas: 0
    unavailableReplicas: 0
    updatedReplicas: 0
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: shadowing
      app.kubernetes.io/component: shadowing
      app.kubernetes.io/instance: shadowing
    name: shadowing
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
    selector:
      deploymentconfig: shadowing
  status:
    loadBalancer: {}
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    labels:
      app: shadowing
      app.kubernetes.io/component: shadowing
      app.kubernetes.io/instance: shadowing
      app.kubernetes.io/name: ""
      app.kubernetes.io/part-of: docs
      app.openshift.io/runtime: ""
      app.openshift.io/runtime-version: latest
    name: shadowing
  spec:
    port:
      targetPort: 8080-tcp
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: edge
    to:
      kind: Service
      name: shadowing
      weight: 100
    wildcardPolicy: None
kind: List
metadata: {}
